# users/src/main/java/com/paranoiax/users/domain/models/user/ProfileChanges.java
@@ -1,0 +1,4 @@
+package com.paranoiax.users.domain.models.user;
+
+public record ProfileChanges(String firstName, String lastName, String bio) {
+}
