# users/src/main/resources/users-openapi.yaml
@@ -63,8 +63,6 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateProfileRequest'
       responses:
-        '200':
-          description: Profile updated successfully
         '204':
           description: Profile updated successfully (No Content)
 
@@ -490,6 +488,12 @@ components:
       properties:
         username:
           type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        bio:
+          type: string
 
     UserSearchItem:
       type: object
@@ -499,11 +503,21 @@ components:
           format: uuid
         username:
           type: string
-        is_online:
-          type: boolean
-        last_seen_at:
+        avatar:
+          $ref: '#/components/schemas/UserAvatar'
+
+    UserAvatar:
+      type: object
+      properties:
+        small:
           type: string
-          format: date-time
+          format: uri
+        medium:
+          type: string
+          format: uri
+        large:
+          type: string
+          format: uri
 
     UserKeysResponse:
       type: object
